--- a/capitulos_1_a_5.html
+++ b/capitulos_1_a_5.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/capitulos/capitulos.css">
     <script src="/capitulos/capitulos.js" defer></script>
-    <title>Comparação - Trabalho de História</title>
+    <title>Capítulos 1 a 5 - Trabalho de História</title>
 </head>
 
 <body>
-    <nav id="nav">
+    <nav id="nav" class="no-select">
         <ul>
             <li><a href="/index.html#capitulos">Capítulos</a></li>
             <li><a href="#">Comparação</a></li>
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
-    <section id="content">
+    <section id="header" style="background-image: url('/static/Screenshot 1.png');">
         <div class="content-wrapper">
             <h1 class="title">Capítulos 1 a 5</h1>
             <div class="chapter-avatar">
-                <div class="author-img"><img src="" alt=""></div>
+                <div class="author-img"><img src="/static/Perfil da Perazo.jpg" alt="Perfil da Perazo"></div>
                 <div class="author-name">Luiza Perazo</div>
             </div>
+        </div>
+    </section>
+    <section id="content">
+        <div class="content-wrapper">
             <div class="content-text">
                 <p>Cap. 1: Certa tarde, quando Bruno chegou em casa vindo da escola, viu Maria, a governanta da família no
                 seu quarto, tirando todas as suas coisas do guarda-roupa. Sua mãe chega e pede para ele ir para a sala
@@ -47,8 +52,18 @@
                 de Bruno por descobrir mais sobre o campo. Bruno começoua conversas com Gretel sobre o lugar, sobre como
                 haviam muitas e muitas pessoas, e como esse lugar era muito assustador.</p>
             </div>
+            <div>
+                <a href="capitulos_6_a_10.html">
+                    <div class="article">
+                        <div class="article-title">Capítulos 6 a 10</div>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
+    <footer id="footer">
+        <div class="copyright-notice">© 2023 William. Todos os direitos reservados.</div>
+    </footer>
 </body>
 
 </html>
