--- a/comparacao.html
+++ b/comparacao.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/capitulos/capitulos.css">
@@ -13,22 +14,30 @@
 </head>
 
 <body>
-    <nav id="nav">
+    <nav id="nav" class="no-select">
         <ul>
             <li><a href="/index.html#capitulos">Capítulos</a></li>
             <li><a href="#">Comparação</a></li>
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
-    <section id="content">
+    <section id="header">
         <div class="content-wrapper">
             <h1 class="title">Comparação entre os livros</h1>
             <div class="chapter-avatar">
-                <div class="author-img"><img src="" alt=""></div>
-                <div class="author-name">Luiza Perazo</div>
+                <div class="author-img"><img src="/static/Perfil da Perazo.jpg" alt="Perfil da Perazo"></div>
+                <div class="author-img"><img src="/static/Perfil do Daniel.jpg" alt="Perfil do Daniel"></div>
+                <div class="author-img"><img src="/static/Perfil do William.jpg" alt="Perfil do William"></div>
+                <div class="author-img"><img src="/static/Perfil do Estevão.jpg" alt="Perfil do Estevão"></div>
+                <div class="author-name">Produção coletiva</div>
             </div>
         </div>
     </section>
+    <section id="content">
+    </section>
+    <footer id="footer">
+        <div class="copyright-notice">© 2023 William. Todos os direitos reservados.</div>
+    </footer>
 </body>
 
 </html>
