--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/home/home.css">
@@ -13,7 +14,7 @@
 </head>
 
 <body>
-    <nav id="nav">
+    <nav id="nav" class="no-select">
         <ul>
             <li><a href="#capitulos">Capítulos</a></li>
             <li><a href="#comparacao">Comparação</a></li>
@@ -25,79 +26,93 @@
         <h2 class="subtitle">2° Bimestre - 9° M1</h2>
     </section>-->
     <section id="capitulos">
-        <div class="chapter" data-index="1" data-status="active">
-            <div class="chapter-wrapper">
-                <h2 class="chapter-title">Capítulos 1 a 5</h2>
-                <div class="chapter-description">Certa tarde, quando Bruno chegou em casa vindo da escola, viu Maria, a
-                    governanta da família no seu quarto, tirando todas as suas coisas do guarda-roupa. Sua mãe chega e
-                    pede para ele ir para a sala de jantar, pois eles teriam que se mudar por causa do trabalho do seu
-                    pai. Bruno se encontra revoltado com esse desenvolvimento já que ele já tivera diversos planos para
-                    realizar com seus amigos, mas a sua mãe o assegura de que isso é para o bem de todos.</div>
-                <div class="chapter-avatar">
-                    <div class="author-img"><img src="" alt=""></div>
-                    <div class="author-name">Luiza Perazo</div>
+        <div class="chapter-container">
+            <div class="chapter" data-index="1">
+                <div class="chapter-hero__img-wrapper">
+                    <div class="chapter-hero__img"></div>
                 </div>
-                <div class="chapter-img">Possivelmente uma imagem</div>
-                <a href="/capitulos_1_a_5.html" class="button see-chapter" role="button">Ler resumo</a>
+                <div class="chapter-wrapper">
+                    <h2 class="chapter-title">Capítulos 1 a 5</h2>
+                    <div class="chapter-description">Em um primeiro momento, Bruno e Gretel são confrontados com
+                        a realidade de que terão de se mudar de Berlim para Haja-Vista.
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil da Perazo.jpg" alt="Perfil da Perazo"></div><!--
+                        -->
+                        <div class="author-name">Luiza Perazo</div>
+                    </div>
+                    <a href="/capitulos_1_a_5.html" class="button see-chapter" role="button">Ler análise</a>
+                </div>
+            </div>
+            <div class="chapter" data-index="2">
+                <div class="chapter-wrapper">
+                    <h2 class="chapter-title">Capítulos 6 a 10</h2>
+                    <div class="chapter-description">Em um primeiro momento, Bruno e Gretel são confrontados com
+                        a realidade de que terão de se mudar de Berlim para Haja-Vista.
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do Daniel.jpg" alt="Perfil do Daniel"></div>
+                        <div class="author-name">Daniel Jiang</div>
+                    </div>
+                    <a href="/capitulos_6_a_10.html" class="button see-chapter" role="button">Ler análise</a>
+                </div>
+            </div>
+            <div class="chapter" data-index="3">
+                <div class="chapter-wrapper">
+                    <h2 class="chapter-title">Capítulos 11 a 15</h2>
+                    <div class="chapter-description">Bruno começa a conhecer melhor o seu novo amigo. Graças a Shmuel,
+                        ele começa a entender melhor por que há pessoas do "outro lado".
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do William.jpg" alt="Perfil do William"></div>
+                        <div class="author-name">William Kotsubo</div>
+                    </div>
+                    <a href="/capitulos_11_a_15.html" class="button see-chapter" role="button">Ler análise</a>
+                </div>
+            </div>
+            <div class="chapter" data-index="4">
+                <div class="chapter-wrapper">
+                    <h2 class="chapter-title">Capítulos 16 a 20</h2>
+                    <div class="chapter-description">Em um primeiro momento, Bruno e Gretel são confrontados com
+                        a realidade de que terão de se mudar de Berlim para Haja-Vista.
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do Estevão.jpg" alt="Perfil do Estevão"></div>
+                        <div class="author-name">Estevão Hideki</div>
+                    </div>
+                    <a href="/capitulos_16_a_20.html" class="button see-chapter" role="button">Ler análise</a>
+                </div>
             </div>
         </div>
-        <div class="chapter" data-index="2" data-status="inactive">
-            <div class="chapter-wrapper">
-                <h2 class="chapter-title">Capítulos 6 a 10</h2>
-                <div class="chapter-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam
-                    cupiditate voluptatem aliquid quia qui earum nihil, at odit dolores. Adipisci quas tenetur natus
-                    similique rerum consequuntur culpa eum nemo.</div>
-                <div class="chapter-avatar">
-                    <div class="author-img"><img src="" alt=""></div>
-                    <div class="author-name">Daniel Jiang</div>
-                </div>
-                <a href="" class="button see-chapter" role="button">Ler resumo</a>
-            </div>
+        <div class="slider-button__wrapper backwards-button">
+            <span class="slider-button no-select">&lt;</span>
         </div>
-        <div class="chapter" data-index="3" data-status="inactive">
-            <div class="chapter-wrapper">
-                <h2 class="chapter-title">Capítulos 11 a 15</h2>
-                <div class="chapter-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam
-                    cupiditate voluptatem aliquid quia qui earum nihil, at odit dolores. Adipisci quas tenetur natus
-                    similique rerum consequuntur culpa eum nemo.</div>
-                <div class="chapter-avatar">
-                    <div class="author-img"><img src="" alt=""></div>
-                    <div class="author-name">William Kotsubo</div>
-                </div>
-                <a href="" class="button see-chapter" role="button">Ler resumo</a>
-            </div>
-        </div>
-        <div class="chapter" data-index="4" data-status="inactive">
-            <div class="chapter-wrapper">
-                <h2 class="chapter-title">Capítulos 16 a 20</h2>
-                <div class="chapter-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam
-                    cupiditate voluptatem aliquid quia qui earum nihil, at odit dolores. Adipisci quas tenetur natus
-                    similique rerum consequuntur culpa eum nemo.</div>
-                <div class="chapter-avatar">
-                    <div class="author-img"><img src="" alt=""></div>
-                    <div class="author-name">Estevão Hideki</div>
-                </div>
-                <a href="" class="button see-chapter" role="button">Ler resumo</a>
-            </div>
+        <div class="slider-button__wrapper forwards-button">
+            <span class="slider-button no-select">></span>
         </div>
     </section>
     <section id="comparacao">
         <div class="chapter">
             <div class="chapter-wrapper">
-                <h2 class="chapter-title">Comparação entre os livros</h2>
+                <h2 class="chapter-title">Comparação</h2>
                 <div class="chapter-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam
                     cupiditate voluptatem aliquid quia qui earum nihil, at odit dolores. Adipisci quas tenetur natus
                     similique rerum consequuntur culpa eum nemo.</div>
                 <div class="chapter-avatar">
-                    <div class="author-img"><img src="" alt=""></div>
-                    <div class="author-name">Luiza Perazo</div>
+                    <div class="author-img"><img src="/static/Perfil da Perazo.jpg" alt="Perfil da Perazo"></div>
+                    <div class="author-img"><img src="/static/Perfil do Daniel.jpg" alt="Perfil do Daniel"></div>
+                    <div class="author-img"><img src="/static/Perfil do William.jpg" alt="Perfil do William"></div>
+                    <div class="author-img"><img src="/static/Perfil do Estevão.jpg" alt="Perfil do Estevão"></div>
+                    <div class="author-name">Produção coletiva</div>
                 </div>
                 <div class="chapter-img">
                     <div class="book-img" id="img__stripped-pyjamas">
-                        <img src="/static/o menino do pijama listrado.jpg" alt="" height="300">
+                        <img src="/static/o menino do pijama listrado.jpg" alt="Livro 'O menino do pijama listrado'"
+                            height="300">
                     </div>
                     <div class="book-img" id="img__nazi-fooler">
-                        <img src="/static/os meninos que enganavam nazis.jpg" alt="" height="300">
+                        <img src="/static/os meninos que enganavam nazis.jpg"
+                            alt="Livro 'Os meninos que enganavam nazistas'" height="300">
                     </div>
                 </div>
                 <a href="/comparacao.html" class="button see-chapter" role="button">Ler a comparação</a>
@@ -105,6 +120,7 @@
         </div>
     </section>
     <section id="membros">
+        <h2>Membros do grupo</h2>
         <div class="members-wrapper">
             <div class="member-avatar">
                 <div class="member-img"><img src="" alt=""></div>
@@ -128,7 +144,9 @@
             </div>
         </div>
     </section>
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <div class="copyright-notice">© 2023 William. Todos os direitos reservados.</div>
+    </footer>
 </body>
 
 </html>
