--- a/capitulos_6_a_10.html
+++ b/capitulos_6_a_10.html
@@ -17,7 +17,7 @@
     <nav id="nav" class="no-select">
         <ul>
             <li><a href="/index.html#capitulos">Capítulos</a></li>
-            <li><a href="#">Comparação</a></li>
+            <li><a href="/comparacao.html">Comparação</a></li>
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
@@ -39,7 +39,7 @@
             </div>
             <div class="articles-wrapper">
                 <a href="capitulos_1_a_5.html">
-                    <div class="previous-article article">
+                    <div class="previous-article article" style="background-image: url('/static/Screenshot 1.png');">
                         <div class="article-title">Capítulos 1 a 5</div>
                     </div>
                 </a>
