--- a/comparacao.html
+++ b/comparacao.html
@@ -34,6 +34,11 @@
         </div>
     </section>
     <section id="content">
+        <div class="content-wrapper">
+            <div class="content-text">
+                <p>Gugu dada</p>
+            </div>
+        </div>
     </section>
     <footer id="footer">
         <div class="copyright-notice">© 2023 William. Todos os direitos reservados.</div>
