--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/home/home.css">
+    <script src="/main.js" defer></script>
     <script src="/home/home.js" defer></script>
     <title>Trabalho de História</title>
 </head>
@@ -16,15 +17,11 @@
 <body>
     <nav id="nav" class="no-select">
         <ul>
-            <li><a href="#capitulos">Capítulos</a></li>
+            <li><a href="#">Capítulos</a></li>
             <li><a href="#comparacao">Comparação</a></li>
             <li><a href="#membros">Membros</a></li>
         </ul>
     </nav>
-    <!--<section>
-        <h1 class="title">Trabalho de História</h1>
-        <h2 class="subtitle">2° Bimestre - 9° M1</h2>
-    </section>-->
     <section id="capitulos">
         <div class="chapter-container">
             <div class="chapter" data-index="1">
