--- a/capitulos_1_a_5.html
+++ b/capitulos_1_a_5.html
@@ -17,7 +17,7 @@
     <nav id="nav" class="no-select">
         <ul>
             <li><a href="/index.html#capitulos">Capítulos</a></li>
-            <li><a href="#">Comparação</a></li>
+            <li><a href="/comparacao.html">Comparação</a></li>
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
