--- a/capitulos_11_a_15.html
+++ b/capitulos_11_a_15.html
@@ -21,7 +21,7 @@
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
-    <section id="header">
+    <section id="header" style="background-image: url('/static/Screenshot 3.png');">
         <div class="content-wrapper">
             <h1 class="title">Capítulos 11 a 15</h1>
             <div class="chapter-avatar">
@@ -53,12 +53,12 @@
             </div>
             <div class="articles-wrapper">
                 <a href="capitulos_6_a_10.html">
-                    <div class="previous-article article">
+                    <div class="previous-article article" style="background-image: url('/static/Screenshot 2.webp');">
                         <div class="article-title">Capítulos 6 a 10</div>
                     </div>
                 </a>
                 <a href="capitulos_16_a_20.html">
-                    <div class="next-article article">
+                    <div class="next-article article" style="background-image: url('/static/Screenshot 4.png');">
                         <div class="article-title">Capítulos 16 a 20</div>
                     </div>
                 </a>
