--- a/capitulos_16_a_20.html
+++ b/capitulos_16_a_20.html
@@ -21,7 +21,7 @@
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
-    <section id="header">
+    <section id="header" style="background-image: url('/static/Screenshot 4.png');">
         <div class="content-wrapper">
             <h1 class="title">Capítulos 16 a 20</h1>
             <div class="chapter-avatar">
@@ -50,7 +50,7 @@
             </div>
             <div>
                 <a href="capitulos_11_a_15.html">
-                    <div class="article">
+                    <div class="article" style="background-image: url('/static/Screenshot 3.png');">
                         <div class="article-title">Capítulos 11 a 15</div>
                     </div>
                 </a>
