--- a/capitulos_1_a_5.html
+++ b/capitulos_1_a_5.html
@@ -54,7 +54,7 @@
             </div>
             <div>
                 <a href="capitulos_6_a_10.html">
-                    <div class="article">
+                    <div class="article" style="background-image: url('/static/Screenshot 2.webp');">
                         <div class="article-title">Capítulos 6 a 10</div>
                     </div>
                 </a>
