--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         </ul>
     </nav>
     <section id="capitulos">
+        <button class="slider-button__wrapper backwards-button">
+            <span class="slider-button no-select">&lt;</span>
+        </button>
+        <button class="slider-button__wrapper forwards-button">
+            <span class="slider-button no-select">></span>
+        </button>
         <div class="chapter-container">
             <div class="chapter" data-index="1">
                 <div class="chapter-hero__img-wrapper">
@@ -42,6 +48,9 @@
                 </div>
             </div>
             <div class="chapter" data-index="2">
+                <div class="chapter-hero__img-wrapper">
+                    <div class="chapter-hero__img"></div>
+                </div>
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 6 a 10</h2>
                     <div class="chapter-description">Em um primeiro momento, Bruno e Gretel são confrontados com
@@ -55,6 +64,9 @@
                 </div>
             </div>
             <div class="chapter" data-index="3">
+                <div class="chapter-hero__img-wrapper">
+                    <div class="chapter-hero__img"></div>
+                </div>
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 11 a 15</h2>
                     <div class="chapter-description">Bruno começa a conhecer melhor o seu novo amigo. Graças a Shmuel,
@@ -68,6 +80,9 @@
                 </div>
             </div>
             <div class="chapter" data-index="4">
+                <div class="chapter-hero__img-wrapper">
+                    <div class="chapter-hero__img"></div>
+                </div>
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 16 a 20</h2>
                     <div class="chapter-description">Em um primeiro momento, Bruno e Gretel são confrontados com
@@ -80,12 +95,6 @@
                     <a href="/capitulos_16_a_20.html" class="button see-chapter" role="button">Ler análise</a>
                 </div>
             </div>
-        </div>
-        <div class="slider-button__wrapper backwards-button">
-            <span class="slider-button no-select">&lt;</span>
-        </div>
-        <div class="slider-button__wrapper forwards-button">
-            <span class="slider-button no-select">></span>
         </div>
     </section>
     <section id="comparacao">
