--- a/capitulos_6_a_10.html
+++ b/capitulos_6_a_10.html
@@ -21,7 +21,7 @@
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
-    <section id="header">
+    <section id="header" style="background-image: url('/static/Screenshot 2.webp');">
         <div class="content-wrapper">
             <h1 class="title">Capítulos 6 a 10</h1>
             <div class="chapter-avatar">
@@ -44,7 +44,7 @@
                     </div>
                 </a>
                 <a href="capitulos_11_a_15.html">
-                    <div class="next-article article">
+                    <div class="next-article article" style="background-image: url('/static/Screenshot 3.png');">
                         <div class="article-title">Capítulos 11 a 15</div>
                     </div>
                 </a>
