--- a/capitulos_16_a_20.html
+++ b/capitulos_16_a_20.html
@@ -43,10 +43,10 @@
                     e o pai com seu grito. Eles descobriram que eram, na verdade, piolhos, e tiveram que raspar o cabelo
                     de Bruno, deixando a mãe muito irritada.</p>
 
-                <p>Cap. 17: No decorrer das semanas seguintes, a mãe estava triste e decidiu falar com o pai. Eles
-                    conversaram e decidiram para que os filhos deveriam sair de Haja-Vista. Bruno estava confuso se
-                    queria voltar para Berlim, já que em Haja-Vista havia Shmuel, mas no fim foi decidido que eles
-                    voltariam para Berlim dentro de uma semana.</p>
+                <p> Capítulo 17.
+                    Ele começa com a mãe de Bruno descontente com a sua vida em Haja-Vista, brigando com o pai de Bruno.
+                    Depois eles foram chamados para a sala de seu pai para mandarem eles de volta para Berlim. Gretel
+                    aceita sem hesitação para voltar, mas Bruno estava em dúvida, pois em Haja-Vista havia Shmuel.</p>
             </div>
             <div>
                 <a href="capitulos_11_a_15.html">
