--- a/capitulos_6_a_10.html
+++ b/capitulos_6_a_10.html
@@ -33,9 +33,8 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p>Cap. 10: Bruno, após andar por quilômetros e quilômetros em busca de algo precioso, encontrou
-                    Schmuel, um menino que estava preso no campo de concentração. Buscando satisfazer sua curiosidade,
-                    ele logo perguntou a ele por que haviam tantas pessoas em seu lado.</p>
+                <p>Bruno se aproxima do garoto com roupa listrada, após conversar com o garoto, ele descobre que o
+                    menino se chama Shmuel, e Bruno acha que ele possui uma vida melhor que a dele.</p>
             </div>
             <div class="articles-wrapper">
                 <a href="capitulos_1_a_5.html">
