--- a/capitulos_16_a_20.html
+++ b/capitulos_16_a_20.html
@@ -33,6 +33,14 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
+                <p>Bruno já estava acostumado com a nova casa, por causa da companhia de Shmuel. Mas do mesmo jeito
+                    Bruno estava um pouco entediado pela cerca e preocupado com a sua mãe, que estava dando vários
+                    cochilos e bem depressiva.</p>
+
+                <p>Gretel havia mudado drasticamente, pela influência do tenente Kotler.
+                    Quando o tenente foi mudado de unidade a Gretel começou a ficar com saudade de sua nova casa, pois
+                    não havia mais a pessoa que ela se inspirava</p>
+
                 <p>Cap. 16: Nada mudou durante um pouco menos de um ano. Mas eles tiveram que voltar para Berlim pois
                     sua avó havia morrido. Eles ficaram dois dias em Berlim e logo voltaram. O tenente Kotler havia sido
                     transferido para outra unidade, mas Bruno estava feliz, pois ninguém chamava ele de "homenzinho", e
@@ -47,6 +55,28 @@
                     Ele começa com a mãe de Bruno descontente com a sua vida em Haja-Vista, brigando com o pai de Bruno.
                     Depois eles foram chamados para a sala de seu pai para mandarem eles de volta para Berlim. Gretel
                     aceita sem hesitação para voltar, mas Bruno estava em dúvida, pois em Haja-Vista havia Shmuel.</p>
+
+                <p> Capítulo 18.
+                    Bruno tenta avisar Shmuel que iria voltar para Berlim, mas ele não estava lá nos 2 dias em que ele
+                    foi, no terceiro dia Shmuel apareceu falando que seu pai havia desaparecido. Bruno e Shmuel bolam um
+                    plano para resgatarem o pai dele, que seria o Bruno entrar no campo com o pijama listrado</p>
+
+                <p> Capítulo 19
+                    O dia estava chuvoso, impedindo o Bruno de ir no campo pela manhã.
+                    Chegando lá ele se encontrou com Shmuel, ele deu o pijama para Bruno, e ele foi para dentro do
+                    campo, para procurar o pai do Shmuel, mesmo que ele esteja desconfortável com a lama em seu corpo.
+                    Eles caminharam até o local da cabana do Shmuel, para procurar pistas. Enquanto eles andavam, Bruno
+                    ficou decepcionado ao ver o local, achando que seria um lugar feliz e legal, mas ao invés disto era
+                    um lugar triste e depressivo. A chuva ficou mais forte e as pessoas da cabana do Shmuel marcharam
+                    para a câmara de gás, pensando que seria apenas um lugar em que foi designado para esperar a chuva
+                    passar</p>
+
+                <p> Capítulo 20
+                    Bruno ficou desaparecido. Deixando todos preocupados. Gretel havia voltado para Berlim com a mãe, na
+                    espera de achar ele lá, mas claro que ele não estava lá, deixando Gretel muito triste. O pai
+                    formulou uma teoria de oque havia acontecido.
+                    Dois meses depois o pai foi chamado, e contente ele foi, esquecendo de oque havia acontecido em
+                    Haja-Vista</p>
             </div>
             <div>
                 <a href="capitulos_11_a_15.html">
