--- a/capitulos_6_a_10.html
+++ b/capitulos_6_a_10.html
@@ -35,6 +35,15 @@
             <div class="content-text">
                 <p>Bruno se aproxima do garoto com roupa listrada, após conversar com o garoto, ele descobre que o
                     menino se chama Shmuel, e Bruno acha que ele possui uma vida melhor que a dele.</p>
+
+                <p>Gretel e Bruno ficam rapidamente entendiados, Bruno começa a explorar a área de onde eles moram,
+                    Bruno encontra um campo de concentração aproximando-se do campo, ele se encontra com shmuel um judeu
+                    que estava preso no campo de concentração</p>
+
+                <p>Gretel idolatra o hitler um líder nazista que comandavam os nazistas a atacarem os judeus e
+                    explandirem os territórios, enquanto se adaptavam as suas novas vidas os pais deles contratam um
+                    professor que explicam sobre os nazistas e ensinavam os que os judeus eram uma raça inferior, o
+                    Bruno não prestava muita atenção nas aulas</p>
             </div>
             <div class="articles-wrapper">
                 <a href="capitulos_1_a_5.html">
