--- a/comparacao.html
+++ b/comparacao.html
@@ -36,7 +36,17 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p>Gugu dada</p>
+                <p> O livro dos meninos que enganavam nazistas escrito por Joseph joffo o livro é escrito em um ponto de
+                    vista dos dois irmãos, o tema consegue ser tratado de forma “gentil” o livro conta sobre dois irmãos
+                    de uma família judia que são obrigados a fugirem dos alemães nazistas com reviravoltas que acontecem
+                    durante a trama.</p>
+
+                <p> O livro o menino de pijama listrada escrito por John Boyne, conta sobre um menino chamado Bruno,
+                    filho de uma família alemã com o pai general nazista, um dia a família de Bruno precisa mudar para
+                    perto de um campo de concentração por causa do trabalho do pai de Bruno, Bruno acha entediante,porém
+                    certo dia enquanto explorava perto de casa ele encontra um campo de concentração onde conhece
+                    shmuel, uma criança judia que estava no campo de concentração, eles vão se encontrando,
+                    desenvolvendo um enredo aos poucos explorando os personagens aos poucos</p>
             </div>
         </div>
     </section>
