--- a/capitulos_11_a_15.html
+++ b/capitulos_11_a_15.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/capitulos/capitulos.css">
+    <link rel="preload" href="/static/Screenshot 3.webp">
     <script src="/capitulos/capitulos.js" defer></script>
     <title>Capítulos 11 a 15 - Trabalho de História</title>
 </head>
@@ -21,11 +22,11 @@
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
-    <section id="header" style="background-image: url('/static/Screenshot 3.png');">
+    <section id="header" style="background-image: url('/static/Screenshot 3.webp');">
         <div class="content-wrapper">
             <h1 class="title">Capítulos 11 a 15</h1>
             <div class="chapter-avatar">
-                <div class="author-img"><img src="/static/Perfil do William.jpg" alt="Perfil do William"></div>
+                <div class="author-img"><img src="/static/Perfil do William.webp" alt="Perfil do William"></div>
                 <div class="author-name">William Kotsubo</div>
             </div>
         </div>
@@ -41,8 +42,8 @@
                 <p>Um dos problemas que Bruno tinha com viver em Haja-Vista era que o lugar não tinha outras crianças
                     para se relacionar, mas agora que finalmente ele encontrou alguém para o fazer compania, ele toma a
                     oportunidade e cria um relacionamento com Shmuel. Todo dia, ele iria vê-lo do outro lado da cerca,
-                    escondido de seus pais, e conversaria com ele. Essa rapidamente se torna na única coisa que ele
-                    ativamente </p>
+                    escondido de seus pais, e conversaria com ele. Essa rapidamente se torna na única coisa que o deixa
+                    feliz em ficar na nova casa.</p>
 
                 <p>Mesmo sem saber a completa dimensão do que estava acontecendo, houveram muitas coisas sutis que
                     indicavam a ele de que houvesse mais sobre o outro lado da cerca além do que estavam dizendo para
@@ -58,7 +59,7 @@
                     </div>
                 </a>
                 <a href="capitulos_16_a_20.html">
-                    <div class="next-article article" style="background-image: url('/static/Screenshot 4.png');">
+                    <div class="next-article article" style="background-image: url('/static/Screenshot 4.webp');">
                         <div class="article-title">Capítulos 16 a 20</div>
                     </div>
                 </a>
