--- a/capitulos_16_a_20.html
+++ b/capitulos_16_a_20.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/capitulos/capitulos.css">
+    <link rel="preload" href="/static/Screenshot 4.webp">
     <script src="/capitulos/capitulos.js" defer></script>
     <title>Capítulos 16 a 20 - Trabalho de História</title>
 </head>
@@ -21,11 +22,11 @@
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
-    <section id="header" style="background-image: url('/static/Screenshot 4.png');">
+    <section id="header" style="background-image: url('/static/Screenshot 4.webp');">
         <div class="content-wrapper">
             <h1 class="title">Capítulos 16 a 20</h1>
             <div class="chapter-avatar">
-                <div class="author-img"><img src="/static/Perfil do Estevão.jpg" alt="Perfil do Estevão"></div>
+                <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
                 <div class="author-name">Estevão Hideki</div>
             </div>
         </div>
@@ -38,7 +39,7 @@
                     cochilos e bem depressiva.</p>
 
                 <p>Gretel havia mudado drasticamente, pela influência do tenente Kotler.
-                    Quando o tenente foi mudado de unidade a Gretel começou a ficar com saudade de sua nova casa, pois
+                    Quando o tenente foi mudado de unidade a Gretel começou a ficar com saudade de sua antiga casa, pois
                     não havia mais a pessoa que ela se inspirava</p>
 
                 <p>Cap. 16: Nada mudou durante um pouco menos de um ano. Mas eles tiveram que voltar para Berlim pois
@@ -80,7 +81,7 @@
             </div>
             <div>
                 <a href="capitulos_11_a_15.html">
-                    <div class="article" style="background-image: url('/static/Screenshot 3.png');">
+                    <div class="article" style="background-image: url('/static/Screenshot 3.webp');">
                         <div class="article-title">Capítulos 11 a 15</div>
                     </div>
                 </a>
