--- a/capitulos_6_a_10.html
+++ b/capitulos_6_a_10.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/capitulos/capitulos.css">
+    <link rel="preload" href="/static/Screenshot 2.webp">
     <script src="/capitulos/capitulos.js" defer></script>
     <title>Capítulos 6 a 10 - Trabalho de História</title>
 </head>
@@ -25,7 +26,7 @@
         <div class="content-wrapper">
             <h1 class="title">Capítulos 6 a 10</h1>
             <div class="chapter-avatar">
-                <div class="author-img"><img src="/static/Perfil do Daniel.jpg" alt="Perfil do Daniel"></div>
+                <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
                 <div class="author-name">Daniel Jiang</div>
             </div>
         </div>
@@ -47,12 +48,12 @@
             </div>
             <div class="articles-wrapper">
                 <a href="capitulos_1_a_5.html">
-                    <div class="previous-article article" style="background-image: url('/static/Screenshot 1.png');">
+                    <div class="previous-article article" style="background-image: url('/static/Screenshot 1.webp');">
                         <div class="article-title">Capítulos 1 a 5</div>
                     </div>
                 </a>
                 <a href="capitulos_11_a_15.html">
-                    <div class="next-article article" style="background-image: url('/static/Screenshot 3.png');">
+                    <div class="next-article article" style="background-image: url('/static/Screenshot 3.webp');">
                         <div class="article-title">Capítulos 11 a 15</div>
                     </div>
                 </a>
