--- a/comparacao.html
+++ b/comparacao.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -25,10 +25,10 @@
         <div class="content-wrapper">
             <h1 class="title">Comparação entre os livros</h1>
             <div class="chapter-avatar">
-                <div class="author-img"><img src="/static/Perfil da Perazo.jpg" alt="Perfil da Perazo"></div>
-                <div class="author-img"><img src="/static/Perfil do Daniel.jpg" alt="Perfil do Daniel"></div>
-                <div class="author-img"><img src="/static/Perfil do William.jpg" alt="Perfil do William"></div>
-                <div class="author-img"><img src="/static/Perfil do Estevão.jpg" alt="Perfil do Estevão"></div>
+                <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt="Perfil da Perazo"></div>
+                <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
+                <div class="author-img"><img src="/static/Perfil do William.webp" alt="Perfil do William"></div>
+                <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
                 <div class="author-name">Produção coletiva</div>
             </div>
         </div>
@@ -36,17 +36,31 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p> O livro dos meninos que enganavam nazistas escrito por Joseph joffo o livro é escrito em um ponto de
-                    vista dos dois irmãos, o tema consegue ser tratado de forma “gentil” o livro conta sobre dois irmãos
-                    de uma família judia que são obrigados a fugirem dos alemães nazistas com reviravoltas que acontecem
-                    durante a trama.</p>
+                <p>O livro <i>Os meninos que enganavam nazistas</i> escrito por Joseph Joffo conta a história de dois
+                    irmãos judeus, Joseph e Maurice, de 10 e 12 anos respectivamente, que escaparam do regime nazista.
+                </p>
 
-                <p> O livro o menino de pijama listrada escrito por John Boyne, conta sobre um menino chamado Bruno,
-                    filho de uma família alemã com o pai general nazista, um dia a família de Bruno precisa mudar para
-                    perto de um campo de concentração por causa do trabalho do pai de Bruno, Bruno acha entediante,porém
-                    certo dia enquanto explorava perto de casa ele encontra um campo de concentração onde conhece
-                    shmuel, uma criança judia que estava no campo de concentração, eles vão se encontrando,
-                    desenvolvendo um enredo aos poucos explorando os personagens aos poucos</p>
+                <p>O livro <i>O menino do pijama listrado</i> escrito por John Boyne conta sobre um menino chamado Bruno
+                    filho de uma família alemã com o pai general nazista.</p>
+
+                <p>Somos expostos a dois pontos de vista de um mesmo momento histórico; de um lado, vemos dois irmãos
+                    judeus expostos ao Holocausto, tendo que se mudar de lugar para lugar para não serem pegos, e por
+                    outro, dois filhos de um general alemão que comanda sob um campo de concentração, vivendo uma vida
+                    confortável, mesmo que sem graça.</p>
+
+                <p>Também temos uma diferença nos nossos protagonistas: em um livro, temos irmãos unidos, que se
+                    ajudaram para escapar do nazismo, e no outro, temos dois irmãos completamente diferentes - uma que é
+                    a favor do nazismo, e outro que se encontra alienado da realidade, não entendendo direito o que está
+                    acontecendo em sua volta.</p>
+
+                <div class="content-image-container">
+                    <div class="content-image-wrapper">
+                        <img alt="Joseph Joffo IMG 2486"
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Joseph_Joffo_IMG_2486.JPG/400px-Joseph_Joffo_IMG_2486.WEBP">
+                    </div>
+                    <div class="content-image-caption">Joseph Joffo, autor do livro mundialmente famoso <i>Un sac de
+                            billes</i> (ou, <i>Os meninos que enganavam nazistas</i>). © Wikimedia Commons</div>
+                </div>
             </div>
         </div>
     </section>
