--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/home/home.css">
+    <link rel="preload" href="/static/Screenshot 1.webp">
     <script src="/main.js" defer></script>
     <script src="/home/home.js" defer></script>
     <title>Trabalho de História</title>
@@ -40,7 +41,7 @@
                         a realidade de que terão de se mudar de Berlim para Haja-Vista.
                     </div>
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil da Perazo.jpg" alt="Perfil da Perazo"></div><!--
+                        <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt="Perfil da Perazo"></div><!--
                         -->
                         <div class="author-name">Luiza Perazo</div>
                     </div>
@@ -53,11 +54,11 @@
                 </div>
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 6 a 10</h2>
-                    <div class="chapter-description">Em um primeiro momento, Bruno e Gretel são confrontados com
-                        a realidade de que terão de se mudar de Berlim para Haja-Vista.
+                    <div class="chapter-description">Bruno explora e encontra Shmuel em um campo de concentração;
+                        finalmente conhece alguém do "outro lado".
                     </div>
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do Daniel.jpg" alt="Perfil do Daniel"></div>
+                        <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
                         <div class="author-name">Daniel Jiang</div>
                     </div>
                     <a href="/capitulos_6_a_10.html" class="button see-chapter" role="button">Ler análise</a>
@@ -73,7 +74,7 @@
                         ele começa a entender melhor por que há pessoas do "outro lado".
                     </div>
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do William.jpg" alt="Perfil do William"></div>
+                        <div class="author-img"><img src="/static/Perfil do William.webp" alt="Perfil do William"></div>
                         <div class="author-name">William Kotsubo</div>
                     </div>
                     <a href="/capitulos_11_a_15.html" class="button see-chapter" role="button">Ler análise</a>
@@ -85,11 +86,11 @@
                 </div>
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 16 a 20</h2>
-                    <div class="chapter-description">Em um primeiro momento, Bruno e Gretel são confrontados com
-                        a realidade de que terão de se mudar de Berlim para Haja-Vista.
+                    <div class="chapter-description">Bruno olha como realmente é o trabalho sujo de seu pai,
+                        confrontando também a morte de sua avó e como é o o campo de concentração.
                     </div>
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do Estevão.jpg" alt="Perfil do Estevão"></div>
+                        <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
                         <div class="author-name">Estevão Hideki</div>
                     </div>
                     <a href="/capitulos_16_a_20.html" class="button see-chapter" role="button">Ler análise</a>
@@ -101,23 +102,24 @@
         <div class="chapter">
             <div class="chapter-wrapper">
                 <h2 class="chapter-title">Comparação</h2>
-                <div class="chapter-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam
-                    cupiditate voluptatem aliquid quia qui earum nihil, at odit dolores. Adipisci quas tenetur natus
-                    similique rerum consequuntur culpa eum nemo.</div>
+                <div class="chapter-description">O holocausto foi uma das maiores tragédias que ocorreram na idade
+                    contemporânea. Os horrores praticados contra a população judia são um exemplo do que nunca repetir,
+                    e pela literatura imortalizamos as histórias e memórias daqueles que sobreviveram. Os dois livros
+                    abordam o assunto de maneiras diferentes, mas transmitem uma mesma mensagem.</div>
                 <div class="chapter-avatar">
-                    <div class="author-img"><img src="/static/Perfil da Perazo.jpg" alt="Perfil da Perazo"></div>
-                    <div class="author-img"><img src="/static/Perfil do Daniel.jpg" alt="Perfil do Daniel"></div>
-                    <div class="author-img"><img src="/static/Perfil do William.jpg" alt="Perfil do William"></div>
-                    <div class="author-img"><img src="/static/Perfil do Estevão.jpg" alt="Perfil do Estevão"></div>
+                    <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt="Perfil da Perazo"></div>
+                    <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
+                    <div class="author-img"><img src="/static/Perfil do William.webp" alt="Perfil do William"></div>
+                    <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
                     <div class="author-name">Produção coletiva</div>
                 </div>
                 <div class="chapter-img">
                     <div class="book-img" id="img__stripped-pyjamas">
-                        <img src="/static/o menino do pijama listrado.jpg" alt="Livro 'O menino do pijama listrado'"
+                        <img src="/static/o menino do pijama listrado.webp" alt="Livro 'O menino do pijama listrado'"
                             height="300">
                     </div>
                     <div class="book-img" id="img__nazi-fooler">
-                        <img src="/static/os meninos que enganavam nazis.jpg"
+                        <img src="/static/os meninos que enganavam nazis.webp"
                             alt="Livro 'Os meninos que enganavam nazistas'" height="300">
                     </div>
                 </div>
@@ -126,27 +128,53 @@
         </div>
     </section>
     <section id="membros">
-        <h2>Membros do grupo</h2>
-        <div class="members-wrapper">
-            <div class="member-avatar">
-                <div class="member-img"><img src="" alt=""></div>
-                <div class="member-name">Daniel Jiang</div>
-                <div class="member-description">Escritor</div>
+        <div class="chapter">
+            <div class="chapter-hero__img-wrapper">
+                <div class="chapter-hero__img"></div>
             </div>
-            <div class="member-avatar">
-                <div class="member-img"><img src="" alt=""></div>
-                <div class="member-name">Estevão Hideki</div>
-                <div class="member-description">Escritor</div>
-            </div>
-            <div class="member-avatar">
-                <div class="member-img"><img src="" alt=""></div>
-                <div class="member-name">Luiza Perazo</div>
-                <div class="member-description">Escritor</div>
-            </div>
-            <div class="member-avatar">
-                <div class="member-img"><img src="" alt=""></div>
-                <div class="member-name">William Kotsubo</div>
-                <div class="member-description">Escritor e diretor criativo</div>
+            <div class="chapter-wrapper">
+                <div class="title-info">
+                    <h2 class="chapter-title">Membros do grupo</h2>
+                    <div class="members-info">
+                        <div class="chapter-hero__img-wrapper">
+                            <div class="chapter-hero__img"></div>
+                        </div>
+                        <div style="position: relative; text-align: center;">
+                            <div class="members-school">Unidade Vergueiro</div>
+                            <div class="members-class">Estudantes do 9° m1</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="members-contributors">
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt=""></div>
+                        <div>
+                            <div class="author-name">Daniel Jiang</div>
+                            <div class="member-description">Escritor</div>
+                        </div>
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt=""></div>
+                        <div>
+                            <div class="author-name">Estevão Hideki</div>
+                            <div class="member-description">Escritor</div>
+                        </div>
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt=""></div>
+                        <div>
+                            <div class="author-name">Luiza Perazo</div>
+                            <div class="member-description">Escritor</div>
+                        </div>
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do William.webp" alt=""></div>
+                        <div>
+                            <div class="author-name">William Kotsubo</div>
+                            <div class="member-description">Escritor e diretor criativo</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
