--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         -->
                         <div class="author-name">Luiza Perazo</div>
                     </div>
-                    <a href="/capitulos_1_a_5.html" class="button see-chapter" role="button">Ler análise</a>
+                    <a href="/capitulos_1_a_5.html" class="button see-chapter" role="button" tabindex="-1">Ler análise</a>
                 </div>
             </div>
             <div class="chapter" data-index="2">
@@ -55,13 +55,13 @@
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 6 a 10</h2>
                     <div class="chapter-description">Bruno explora e encontra Shmuel em um campo de concentração;
-                        finalmente conhece alguém do "outro lado".
+                        finalmente conhece alguém do "outro lado".
                     </div>
                     <div class="chapter-avatar">
                         <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
                         <div class="author-name">Daniel Jiang</div>
                     </div>
-                    <a href="/capitulos_6_a_10.html" class="button see-chapter" role="button">Ler análise</a>
+                    <a href="/capitulos_6_a_10.html" class="button see-chapter" role="button" tabindex="-1">Ler análise</a>
                 </div>
             </div>
             <div class="chapter" data-index="3">
@@ -77,7 +77,7 @@
                         <div class="author-img"><img src="/static/Perfil do William.webp" alt="Perfil do William"></div>
                         <div class="author-name">William Kotsubo</div>
                     </div>
-                    <a href="/capitulos_11_a_15.html" class="button see-chapter" role="button">Ler análise</a>
+                    <a href="/capitulos_11_a_15.html" class="button see-chapter" role="button" tabindex="-1">Ler análise</a>
                 </div>
             </div>
             <div class="chapter" data-index="4">
@@ -93,7 +93,7 @@
                         <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
                         <div class="author-name">Estevão Hideki</div>
                     </div>
-                    <a href="/capitulos_16_a_20.html" class="button see-chapter" role="button">Ler análise</a>
+                    <a href="/capitulos_16_a_20.html" class="button see-chapter" role="button" tabindex="-1">Ler análise</a>
                 </div>
             </div>
         </div>
@@ -147,20 +147,6 @@
                 </div>
                 <div class="members-contributors">
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt=""></div>
-                        <div>
-                            <div class="author-name">Daniel Jiang</div>
-                            <div class="member-description">Escritor</div>
-                        </div>
-                    </div>
-                    <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt=""></div>
-                        <div>
-                            <div class="author-name">Estevão Hideki</div>
-                            <div class="member-description">Escritor</div>
-                        </div>
-                    </div>
-                    <div class="chapter-avatar">
                         <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt=""></div>
                         <div>
                             <div class="author-name">Luiza Perazo</div>
@@ -168,10 +154,24 @@
                         </div>
                     </div>
                     <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt=""></div>
+                        <div>
+                            <div class="author-name">Daniel Jiang</div>
+                            <div class="member-description">Escritor</div>
+                        </div>
+                    </div>
+                    <div class="chapter-avatar">
                         <div class="author-img"><img src="/static/Perfil do William.webp" alt=""></div>
                         <div>
                             <div class="author-name">William Kotsubo</div>
-                            <div class="member-description">Escritor e diretor criativo</div>
+                            <div class="member-description">Escritor e programador</div>
+                        </div>
+                    </div>
+                    <div class="chapter-avatar">
+                        <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt=""></div>
+                        <div>
+                            <div class="author-name">Estevão Hideki</div>
+                            <div class="member-description">Escritor</div>
                         </div>
                     </div>
                 </div>
