--- a/capitulos_6_a_10.html
+++ b/capitulos_6_a_10.html
@@ -34,17 +34,11 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p>Bruno se aproxima do garoto com roupa listrada, após conversar com o garoto, ele descobre que o
-                    menino se chama Shmuel, e Bruno acha que ele possui uma vida melhor que a dele.</p>
+                <p>Enquanto se adaptavam as suas novas vidas, os pais de Bruno e Gretel contratam um professor que explica sobre os nazistas e os ensinava que os judeus eram uma raça inferior. O Bruno não prestava muita atenção nas aulas, mas Gretel presta, idolatrando o Hitler, líder do Estado alemão que comandavam os nazistas a atacarem os judeus e explandirem o território.</p>
 
-                <p>Gretel e Bruno ficam rapidamente entendiados, Bruno começa a explorar a área de onde eles moram,
-                    Bruno encontra um campo de concentração aproximando-se do campo, ele se encontra com shmuel um judeu
-                    que estava preso no campo de concentração</p>
-
-                <p>Gretel idolatra o hitler um líder nazista que comandavam os nazistas a atacarem os judeus e
-                    explandirem os territórios, enquanto se adaptavam as suas novas vidas os pais deles contratam um
-                    professor que explicam sobre os nazistas e ensinavam os que os judeus eram uma raça inferior, o
-                    Bruno não prestava muita atenção nas aulas</p>
+                <p>Gretel e Bruno rapidamente ficam entendiados, com Bruno começando a explorar a área onde moram. Bruno encontra um campo de concentração e, aproximando-se do campo, ele se encontra com um menino que estava preso no campo de concentração.</p>
+                    
+                <p>Bruno se aproxima do garoto de roupa listrada, e após conversar com ele, descobre que ele se chama Shmuel, e Bruno acha que ele possui uma vida melhor que a dele por ter muitas pessoas do lado dele da cerca, sem estar ciente do contexto inteiro.</p>
             </div>
             <div class="articles-wrapper">
                 <a href="capitulos_1_a_5.html">
