--- a/comparacao.html
+++ b/comparacao.html
@@ -21,6 +21,11 @@
             <li><a href="/index.html#membros">Membros</a></li>
         </ul>
     </nav>
+    <style>
+        #header::before {
+            background: #172020b2;
+        }
+    </style>
     <section id="header">
         <div class="content-wrapper">
             <h1 class="title">Comparação entre os livros</h1>
@@ -41,7 +46,7 @@
                 </p>
 
                 <p>O livro <i>O menino do pijama listrado</i> escrito por John Boyne conta sobre um menino chamado Bruno
-                    filho de uma família alemã com o pai general nazista.</p>
+                    filho de uma família alemã cujo pai é um general nazista.</p>
 
                 <p>Somos expostos a dois pontos de vista de um mesmo momento histórico; de um lado, vemos dois irmãos
                     judeus expostos ao Holocausto, tendo que se mudar de lugar para lugar para não serem pegos, e por
@@ -53,6 +58,10 @@
                     a favor do nazismo, e outro que se encontra alienado da realidade, não entendendo direito o que está
                     acontecendo em sua volta.</p>
 
+                <p>Contudo, há uma semelhança crucial entre os dois: ambos mostram o Holocausto como a catástrofe que foi. No primeiro livro, há o medo constante da perseguição alemã chegar até eles, que mostra como o regime foi uma experiência traumática para todos que tiveram de escapar dele. No momento que o autor teve de sair de casa, conta:</p>
+
+                <div class="content-quote">Nossa infância tinha terminado.<div class="content-quote-author">- Joseph Joffo</div></div>
+
                 <div class="content-image-container">
                     <div class="content-image-wrapper">
                         <img alt="Joseph Joffo IMG 2486"
@@ -61,6 +70,8 @@
                     <div class="content-image-caption">Joseph Joffo, autor do livro mundialmente famoso <i>Un sac de
                             billes</i> (ou, <i>Os meninos que enganavam nazistas</i>). © Wikimedia Commons</div>
                 </div>
+
+                <p>O segundo livro nos transmite essa mensagem pelo livro inteiro na forma de Shmuel, que descreve a nosso protagonista sobre as condições de vida dele, mas de forma especialmente impactante no final, em que o autor brilhantemente traz os dois amigos a um fim trágico, mostrando a brutalidade do regime na sua forma mais fria.</p>
             </div>
         </div>
     </section>
