--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 6 a 10</h2>
                     <div class="chapter-description">Bruno explora e encontra Shmuel em um campo de concentração;
-                        finalmente conhece alguém do "outro lado".
+                        é o primeiro garoto que realmente conhece com o pijama listrado.
                     </div>
                     <div class="chapter-avatar">
                         <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
@@ -87,7 +87,7 @@
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 16 a 20</h2>
                     <div class="chapter-description">Bruno olha como realmente é o trabalho sujo de seu pai,
-                        confrontando também a morte de sua avó e como é o o campo de concentração.
+                        confrontando também a morte de sua avó e como é o o campo de concentração.
                     </div>
                     <div class="chapter-avatar">
                         <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
@@ -147,28 +147,28 @@
                 </div>
                 <div class="members-contributors">
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt=""></div>
+                        <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt="Perfil da Perazo"></div>
                         <div>
                             <div class="author-name">Luiza Perazo</div>
-                            <div class="member-description">Escritor</div>
+                            <div class="member-description">Escritora</div>
                         </div>
                     </div>
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt=""></div>
+                        <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
                         <div>
                             <div class="author-name">Daniel Jiang</div>
                             <div class="member-description">Escritor</div>
                         </div>
                     </div>
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do William.webp" alt=""></div>
+                        <div class="author-img"><img src="/static/Perfil do William.webp" alt="Perfil do William"></div>
                         <div>
                             <div class="author-name">William Kotsubo</div>
                             <div class="member-description">Escritor e programador</div>
                         </div>
                     </div>
                     <div class="chapter-avatar">
-                        <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt=""></div>
+                        <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
                         <div>
                             <div class="author-name">Estevão Hideki</div>
                             <div class="member-description">Escritor</div>
