--- a/capitulos_1_a_5.html
+++ b/capitulos_1_a_5.html
@@ -34,42 +34,12 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p>Gretel e seu irmão, no começo, não se davam muito bem. Depois da mudança de Berlim para Haja-Vista, a
-                    relação entre eles piorou, pois cada um tinha visões diferentes, tanto ao lugar, quanto ao Nazismo.
+                <p>Gretel e seu irmão, no começo, não se davam muito bem. Depois da mudança de Berlim para Haja-Vista, a relação entre eles piorou, pois cada um tinha visões diferentes, tanto ao lugar quanto ao Nazismo.
                 </p>
 
-                <p>Gretel aceita totalmente o Nazismo e acredita que "depois que dermos um jeito na casa, provavelmente
-                    não será mais tão ruim", enquanto Bruno, que ainda é uma criança de grande imaginação, inocência e
-                    bondade não entende o que está acontecendo e apenas deseja voltar para sua casa em Berlim. "Aqui não
-                    é minha casa e nunca vai ser."</p>
+                <p>Gretel aceita totalmente o Nazismo e acredita que "depois que dermos um jeito na casa, provavelmente não será mais tão ruim", enquanto Bruno, que ainda é uma criança de grande imaginação, inocência e bondade não entende o que está acontecendo e apenas deseja voltar para sua casa em Berlim.</p>
 
-                <p>Cap. 1: Certa tarde, quando Bruno chegou em casa vindo da escola, viu Maria, a governanta da família
-                    no
-                    seu quarto, tirando todas as suas coisas do guarda-roupa. Sua mãe chega e pede para ele ir para a
-                    sala
-                    de jantar, pois eles teriam que se mudar por causa do trabalho do seu pai. Bruno se encontra
-                    revoltado
-                    com esse desenvolvimento já que ele já tivera diversos planos para realizar com seus amigos, mas a
-                    sua
-                    mãe o assegura de que isso é para o bem de todos.</p>
-
-                <p>Cap. 2: Bruno fica revoltado com ter que se mudar para esse lugar. Ele tinha seus motivos: sua casa
-                    em
-                    Berlin tinha muito mais pessoas para brincar, mas essa ficava isolada, a casa em Berlin era muito
-                    maior
-                    e com cômodos aos quais nunca estivera, enquanto esta era pequena, entre uma infinitude de outras
-                    coisas. Ele só queria voltar parra sua casa. Mas como explorador, ele logo foi para a janela, e de
-                    lá
-                    viu um campo.</p>
-
-                <p>Cap. 3: Gretel passava prande parte de seu tempo com suas bonecas em seu quarto. Ela achava a casa
-                    também desagradável, mas que, quando dessem um jeito nela, ficaria melhor.</p>
-
-                <p>Cap. 4: Esse capítulo demonstra a parte mais curiosa de Bruno. Aqui que se começa a desenvolver a
-                    busca
-                    de Bruno por descobrir mais sobre o campo. Bruno começoua conversas com Gretel sobre o lugar, sobre
-                    como
-                    haviam muitas e muitas pessoas, e como esse lugar era muito assustador.</p>
+                <div class="content-quote">Aqui não é minha casa e nunca vai ser.<div class="content-quote-author">- Bruno</div></div>
             </div>
             <div>
                 <a href="capitulos_6_a_10.html">
